LPD-49265 Need more --add-opens